--- a/components/profile/ProfilePage.module.css
+++ b/components/profile/ProfilePage.module.css
@@ -1,9 +1,9 @@
 .page {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  height: 100%;
   background-color: var(--bg-primary);
-  padding-bottom: var(--padding-bottom);
+  overflow: hidden;
 }
 
 .header {
